@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
-<addon id="plugin.video.bscfusion" name="Fusion TV" version="0.0.2" provider-name="kodi1">
+<addon id="plugin.video.bscfusion" name="Fusion TV" version="0.0.3" provider-name="kodi1">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
     <import addon="script.module.requests" version="1.1.0"/>
