@@ -4,8 +4,8 @@
     <category label="30300">
       <setting label="30301" type="text"   id="username" default=""/>
       <setting label="30302" type="text"   id="password" option="hidden" default=""/>
-      <setting label="30303" type="slider" id="refresh" default="60" range="30,10,600" option="int" />
-      <setting label="30304" type="slider" id="timeout" default="1.5" range="0.5,0.5,10" option="float" />
+      <setting label="30303" type="slider" id="refresh" default="30" range="30,10,600" option="int" />
+      <setting label="30304" type="slider" id="timeout" default="10.0" range="0.5,0.5,15" option="float" />
       <setting label="30305" type="text"   id="base" default="https://api.iptv.bulsat.com"/>
       <setting label="30306" type="bool"   id="dbg" default="false"/>
       <setting label="30307" type="slider" id="offset" default="120" range="-360,15,360" option="int"/>
